projects/examples/source/06.13.cxx
///////////////////////////////////////////////////////////////////

// chapter : Projects and Libraries

///////////////////////////////////////////////////////////////////

// section : Modular Programming

///////////////////////////////////////////////////////////////////

// content : Module Units
//
// content : Declaration module
//
// content : Module Interface Units
//
// content : Global Module Fragments
//
// content : Exports and Imports
//
// content : Declarations export and import
//
// content : Standard Library Modules
//
// content : Single, Group and Namespace Exports
//
// content : Private Module Fragments

///////////////////////////////////////////////////////////////////

module;

///////////////////////////////////////////////////////////////////

#if defined(NO_TRACE)

#define TRACE(scope, string) ;

#else

#define TRACE(scope, string) std::print("{} : {}\n", scope, string)

#endif

///////////////////////////////////////////////////////////////////

export module library;

///////////////////////////////////////////////////////////////////

export import library.submodule;

///////////////////////////////////////////////////////////////////

import <print>;

///////////////////////////////////////////////////////////////////

export namespace library
{
	void test_v1();

//  -------------------------------------

	void test_v2() 
	{ 
		std::print("library::test_v2\n");
	}
}

///////////////////////////////////////////////////////////////////

// module : private; // error

///////////////////////////////////////////////////////////////////

namespace library
{
	void test_v3() 
	{ 
		std::print("library::test_v3\n");
	}
}

///////////////////////////////////////////////////////////////////